force-app/main/default/objects/copado__Pull_Request__c/fields/Blank_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Blank_Placeholder__c</fullName>
    <description>Use as a blank space on a Lightning Record Page</description>
    <label>.</label>
    <length>1</length>
    <type>Text</type>
</CustomField>