force-app/main/default/objects/copado__Pull_Request__c/fields/Total_Reviewers_Optional__c.field-meta.xml
<CustomField>
    <fullName>Total_Reviewers_Optional__c</fullName>
    <formula>Total_Reviewers_Requested__c -  Total_Reviewers_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Reviewers Requested less Total Reviewers Required; the PR Submitter&apos;s Reviews are not counted amongst PR Metrics.</inlineHelpText>
    <label>Total Reviewers Optional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>