force-app/main/default/objects/copado__Pull_Request__c/fields/Total_Reviewers_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Reviewers_Requested__c</fullName>
    <description>Length of string in Requested Reviewers with commas, less length of string without commas, plus 1</description>
    <formula>IF( CONTAINS( copado__Requested_Reviewers__c , copado__Username__c ), 

(LEN( copado__Requested_Reviewers__c ) - LEN( SUBSTITUTE( copado__Requested_Reviewers__c, &apos;,&apos;, &apos;&apos;) )), 

(LEN( copado__Requested_Reviewers__c ) - LEN( SUBSTITUTE( copado__Requested_Reviewers__c, &apos;,&apos;, &apos;&apos;) )) + 1)</formula>
    <inlineHelpText>Count of Reviewers Requested; the PR Submitter&apos;s Reviews are not counted amongst PR Metrics.</inlineHelpText>
    <label>Total Reviewers Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>