force-app/main/default/objects/copado__Pull_Request__c/fields/Total_Reviewers_Required__c.field-meta.xml
<CustomField>
    <fullName>Total_Reviewers_Required__c</fullName>
    <description>Length of string in Requested Reviewers with &apos;(Required)&apos;, less length of string without &apos;(Required)&apos;, divided by 10</description>
    <formula>IF( CONTAINS( copado__Requested_Reviewers__c, copado__Username__c&amp;&apos; (Required)&apos;), 
((LEN( copado__Requested_Reviewers__c )- LEN( SUBSTITUTE( copado__Requested_Reviewers__c, &apos;(Required)&apos;, &apos;&apos;) )) / 10) - 1, 
(LEN( copado__Requested_Reviewers__c )- LEN( SUBSTITUTE( copado__Requested_Reviewers__c, &apos;(Required)&apos;, &apos;&apos;) )) / 10)</formula>
    <inlineHelpText>Count of Required Reviewers requested; the PR Submitter&apos;s Reviews are not counted amongst PR Metrics.</inlineHelpText>
    <label>Total Reviewers Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>